// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useExpandable returns a transformer to open items 1`] = `
Array [
  Object {
    "description": "DESCRIPTION",
    "id": 16,
    "isOpen": false,
    "name": "TEST ITEM #16",
    "severity": "high",
  },
  Object {
    "cells": Array [
      Object {
        "title": <ExampleDetailsRow
          rule={
            Object {
              "description": "DESCRIPTION",
              "id": 16,
              "itemId": 1,
              "name": "TEST ITEM #16",
              "severity": "high",
            }
          }
        />,
      },
    ],
    "parent": 2,
  },
]
`;

exports[`useExpandable returns an expandable configuration 1`] = `
Object {
  "all": Array [
    Object {
      "tableProps": Object {
        "onCollapse": [Function],
      },
      "transformer": [Function],
    },
  ],
  "current": Object {
    "tableProps": Object {
      "onCollapse": [Function],
    },
    "transformer": [Function],
  },
  "error": undefined,
}
`;

exports[`useExpandable sets an item as open onCollapse 1`] = `
Array [
  Object {
    "description": "DESCRIPTION",
    "id": 16,
    "isOpen": true,
    "name": "TEST ITEM #16",
    "severity": "high",
  },
  Object {
    "cells": Array [
      Object {
        "title": <ExampleDetailsRow
          rule={
            Object {
              "description": "DESCRIPTION",
              "id": 16,
              "itemId": 1,
              "name": "TEST ITEM #16",
              "severity": "high",
            }
          }
        />,
      },
    ],
    "parent": 2,
  },
]
`;
